# Decentralized-Ajo

./: .env  .env.example  .gitignore  00_START_HERE_INDEX.md  ADMIN_PANEL_IMPLEMENTATION.md  ADMIN_PANEL_TESTING.md  AJOTEST_PROFESSIONAL_IMPLEMENTATION.md  ATTACK_FLOW_DIAGRAM.md  AUDIT_COMPLETION_SUMMARY.md  BACKEND_SETUP_STATUS.md  COMMIT_MESSAGE.txt  CONTRACT_VERIFICATION.md  DATABASE_OPTIMIZATION.md  DELIVERABLES_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SEPOLIA.md  DEPLOYMENT_START_HERE.md  DEPLOYMENT_WORKFLOW.md  DEVELOPMENT.md  DOCUMENTATION.md  EVENT_EMISSIONS_IMPLEMENTATION.md  EXECUTIVE_SUMMARY.md  FINAL_VERIFICATION.md  FRONTEND_INTEGRATION.md  HEALTH_CHECK_DOCUMENTATION.md  INDEX_SECURITY_AUDIT.md  PACKAGE_SUMMARY.md  PROJECT_SUMMARY.md  PR_MESSAGE_115.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_ETHEREUM.md  README_SECURITY_AUDIT.md  README_TRANSACTION_IMPLEMENTATION.md  REENTRANCY_ATTACK_FLOW.md  REENTRANCY_FIX_SUMMARY.md  REENTRANCY_PATCH_REPORT.md  (+37 more)
contracts/ajo-circle/: Cargo.toml  DEPLOYMENT_SECURITY_CHECKLIST.md  DEPOSIT_ISSUE_RESOLUTION.md  DEPOSIT_TESTS_README.md  DEPOSIT_TEST_PLAN.md  MAINNET_READINESS_CHECKLIST.md  PAUSABLE_IMPLEMENTATION.md  README.md  REENTRANCY_PROTECTION_DIAGRAM.md  SECURITY_GUIDELINES.md  TODO.md  build_error.txt  run_deposit_tests.ps1  run_deposit_tests.sh  test_output.txt  wasm_check.txt
contracts/ajo-circle/adr/: 0001-static-analysis-formal-methods-evaluation.md
contracts/ajo-circle/fresh_target/: .rustc_info.json
contracts/ajo-circle/fuzz/: Cargo.toml
(+414 files in other folders)
