[package]
name = "ajo-circle"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
soroban-sdk = "=20.0.0"
soroban-sdk-macros = "=20.0.0"

[dev-dependencies]
soroban-sdk = { version = "=20.0.0", features = ["testutils"] }

[workspace]
