[package]
name = "ajo-circle-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
soroban-sdk = { version = "=20.0.0", features = ["testutils"] }
ajo-circle = { path = ".." }

[[bin]]
name = "fuzz_initialize"
path = "fuzz_targets/fuzz_initialize.rs"

[[bin]]
name = "fuzz_contribute"
path = "fuzz_targets/fuzz_contribute.rs"

[[bin]]
name = "fuzz_payout"
path = "fuzz_targets/fuzz_payout.rs"

[[bin]]
name = "fuzz_governance"
path = "fuzz_targets/fuzz_governance.rs"

[[bin]]
name = "fuzz_roles"
path = "fuzz_targets/fuzz_roles.rs"
